# Write-Optimized-Vector-Database

./: CMakeLists.txt  Dockerfile  README.md  conanfile.txt  docker-compose.yml
configs/: woved-default.yaml
include/woved/: types.h
packaging/debian/: control  woved.service
schemas/: wal-record.fbs
scripts/: build.sh  fault-inject.sh  test.sh
src/cpp/core/: config.cpp  config.h
src/cpp/storage/: latest-by-id.h
src/cpp/storage/betree/: b-epsilon-tree.h
src/cpp/storage/buffer/: msg-buf.h
src/cpp/util/: exceptions.h  hash.h  logging.cpp  logging.h  uuid-v7.cpp  uuid-v7.h
